Added: logging in a specific tree only. Added: file logging tree
Timber's default behavior is to broadcast the logs to all the planted trees. This is sometimes not a desired behavior if one wants to plant multiple trees each for certain purpose. This commit addresses this feature.

File logger has also been added to Timber.

NEEDS FURTHER TESTING!

--- a/timber/build.gradle
+++ b/timber/build.gradle
@@ -45,6 +45,8 @@ dependencies {
   testImplementation deps.robolectric
 
   lintChecks project(':timber-lint')
+
+  implementation "io.reactivex.rxjava2:rxjava:2.1.9"
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
