--- a/timber/src/main/AndroidManifest.xml
+++ b/timber/src/main/AndroidManifest.xml
@@ -1,3 +1,6 @@
-<manifest package="timber.log">
+<manifest package="timber.log"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application/>
 </manifest>
